# HexWizardry

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: HexEditor.hpp  Platform.hpp
resource/: test.txt
src/: main.cpp
test/: testFile.txt
ui/include/: HexModel.hpp  HexView.hpp  MainWindow.hpp
ui/src/: HexModel.cpp  HexView.cpp  MainWindow.cpp
utils/: fileHander.hpp
